--- a/sections/sidebar.liquid
+++ b/sections/sidebar.liquid
@@ -67,7 +67,9 @@
             </li>
           {% else %}
             <li class="site-nav__item{% if link.active %} site-nav--active{% endif %}">
-              <a href="{{ link.url }}" class="site-nav__link"{% if link.active %} aria-current="page"{% endif %}>{{ link.title | escape }}</a>
+              <a href="{{ link.url }}" class="site-nav__link {% if link.title == 'The Pin Collective'%} font-weight-bold {% endif %}"{% if link.active %} aria-current="page"{% endif %}>
+								{{ link.title | escape }}	 {% if link.title == 'The Pin Collective'%} <span class="badge badge-danger mx-2 my-1">New</span> {% endif %}
+							</a>
             </li>
           {% endif %}
         {% endfor %}
