change styling of the pagination in 'SHOP ALL' collections page

--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -104,7 +104,7 @@
   </div>
 
   {% if paginate.pages > 1 %}
-    <div class="pagination text-center">
+    <div class="pagination d-flex justify-content-center">
       {{ paginate | default_pagination }}
     </div>
   {% endif %}
