--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1,26 +1,35 @@
 body a:hover {
   color: #000;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 #seller-profile .mp_sp_page .filter-block {
-  display: none; }
+  display: none;
+}
 
 .artist-page {
-  font-size: 12px; }
-  .artist-page p {
-    margin: 0px; }
-  .artist-page hr {
-    margin: 15px 0;
-    /*border: 0;
+  font-size: 12px;
+}
+
+.artist-page p {
+  margin: 0px;
+}
+
+.artist-page hr {
+  margin: 15px 0;
+  /*border: 0;
 		border-bottom: 1px dashed #ccc;
 		background: #999;*/
-    border: 0;
-    height: 1px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0)));
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); }
-  .artist-page .bg-light {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 5px !important; }
+  border: 0;
+  height: 1px;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0)));
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.artist-page .bg-light {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 5px !important;
+}
